[add] mermaid diagrams

--- a/docs/programming/concurrent-programming/03. Multiprocessing.md
+++ b/docs/programming/concurrent-programming/03. Multiprocessing.md
@@ -62,6 +62,7 @@ A process is generally created and controlled by the OS.
 %%{
   init: {
     'theme': 'base',
+    'layout': 'elk',
     'themeVariables': {
       'primaryColor': '#b19cd9',
       'primaryTextColor': '#4b0082',
