--- a/docs/programming/concurrent-programming/05. IPC.md
+++ b/docs/programming/concurrent-programming/05. IPC.md
@@ -16,9 +16,9 @@ tags:
 ---
 
 # IPC (Inter-Process Communication)
-In concurrent programming, multiple processes or threads (we simply gonna say those two be tasks) often need to communicate to coordinate works, share data, or manage resources. This communication is known as Inter-Process Communication (IPC). Even when tasks do not explicitly exchange messages, they still interact implicitly by competing for shared resources.
+In concurrent programming, multiple processes or threads (we simply gonna say those two be tasks) often need to communicate to coordinate works, share data, or manage resources. This communication is known as Inter-Process Communication (IPC). Even when tasks do not explicitly exchange messages, they might still interact implicitly by competing for shared resources.
 
-The choice of IPC mechanism depends on whether you're working with multithreading (shared memory within a single process) or multiprocessing (separate memory spaces). While "IPC" technically refers to communication between processes, we'll also consider communication between threads under the same umbrella.
+Technically, IPC seems that it only refers to communication between the processes, but it is not. We could also apply this techniques in terms of between threads.
 
 <details open markdown="block">
   <summary>
