--- a/docs/programming/concurrent-programming/06. IPC-Message-Passing.md
+++ b/docs/programming/concurrent-programming/06. IPC-Message-Passing.md
@@ -39,7 +39,34 @@ The advantage of Message-Passing is that the OS manages the channel, providing a
 
 ## Pipe
 
-Pipes provide a unidirectional communication channel between processes. They are commonly used for parent-child process communication and allow data transfer in a sequential manner.
+Pipes provide a unidirectional communication channel between two processes (one-to-one, one way, write then read). They are commonly used for parent-child process communication and allow data transfer in a sequential manner.
+
+```mermaid
+%%{
+  init: {
+    'theme': 'base',
+    'layout': 'elk',
+    'themeVariables': {
+      'primaryColor': '#b19cd9',
+      'primaryTextColor': '#4b0082',
+      'primaryBorderColor': '#800080',
+      'edgeLabelBackground': '#ffffff',
+      'tertiaryColor': '#e6e6fa', 
+      'nodeBorder': '#6a0dad'
+    },
+    'curve': 'basis'
+  }
+}%%
+sequenceDiagram
+    participant Process A
+    participant Pipe
+    participant Process B
+
+    Process A->>Pipe: Write Data
+    Pipe-->>Process B: Read Data
+    Process B->>Process B: Process Data
+
+```
 
 ### Python Example
 ```python
@@ -227,6 +254,42 @@ Process Ended in 2.00611 [s].
 
 Message queues allow multiple processes to exchange discrete messages asynchronously. This mechanism ensures structured communication and enables better decoupling of process execution.
 
+```mermaid
+%%{
+  init: {
+    'theme': 'base',
+    'layout': 'elk',
+    'themeVariables': {
+      'primaryColor': '#b19cd9',
+      'primaryTextColor': '#4b0082',
+      'primaryBorderColor': '#800080',
+      'edgeLabelBackground': '#ffffff',
+      'tertiaryColor': '#e6e6fa', 
+      'nodeBorder': '#6a0dad'
+    },
+    'curve': 'basis'
+  }
+}%%
+sequenceDiagram
+    participant Process A
+    participant Process B
+    participant Process C
+    participant Message Queue
+    participant Process D
+    participant Process E
+
+    Process A->>Message Queue: Send Message 1
+    Process B->>Message Queue: Send Message 2
+    Process C->>Message Queue: Send Message 3
+    
+    Message Queue-->>Process D: Deliver Message 1
+    Message Queue-->>Process E: Deliver Message 2
+    Message Queue-->>Process D: Deliver Message 3
+
+    Process D->>Process D: Process Message 1 & 3
+    Process E->>Process E: Process Message 2
+```
+
 ### Python Example
 
 ```python
@@ -408,6 +471,40 @@ Process Ended in 1.00558 [s].
 ## Socket
 
 Sockets provide communication between processes over a network or within the same machine. They support both connection-oriented (TCP) and connectionless (UDP) communication models, making them suitable for distributed systems. In this case, we use local socket by using `AF_UNIX` to communicate between threads.
+
+```mermaid
+%%{
+  init: {
+    'theme': 'base',
+    'layout': 'elk',
+    'themeVariables': {
+      'primaryColor': '#b19cd9',
+      'primaryTextColor': '#4b0082',
+      'primaryBorderColor': '#800080',
+      'edgeLabelBackground': '#ffffff',
+      'tertiaryColor': '#e6e6fa', 
+      'nodeBorder': '#6a0dad'
+    },
+    'curve': 'basis'
+  }
+}%%
+sequenceDiagram
+    participant Process A
+    participant Socket
+    participant Process B
+
+    Process A->>Socket: Connect to Process B
+    Process B-->>Socket: Accept Connection
+
+    Process A->>Socket: Send Data (Message 1)
+    Socket-->>Process B: Receive Data (Message 1)
+    
+    Process B->>Socket: Send Response (Message 2)
+    Socket-->>Process A: Receive Response (Message 2)
+
+```
+
+Using multiple sockets, we can provide typical web server architecture, which will be discussed in the future.
 
 ### Python Example
 
