--- a/docs/programming/concurrent-programming/04. Multithreading.md
+++ b/docs/programming/concurrent-programming/04. Multithreading.md
@@ -19,6 +19,7 @@ Multithreading is technique of executing multiple threads concurrently.
 
 A **thread** is an independent sequence of instructions within a process. It is the smallest unit of execution that the operating system (OS) can schedule. Multiple threads within a process share the same memory space but execute independently.
 
+
 <details open markdown="block">
   <summary>
     Table of contents
@@ -36,21 +37,18 @@ In short, each thread operates independently, unaware of the others unless expli
 
 ## Advantages and Disadvantages
 
-### Pros - memory / communication overhead
+### Memory / Communication efficiency
 
-- Efficient Memory Usage: Threads require significantly less memory overhead compared to creating new processes with fork(), as threads share the same memory space.
+- Efficient Memory Usage: Threads require significantly less memory overhead compared to creating new processes with fork()/spawn().
+
+- Fast Communication: Since threads within the same process share memory, they can exchange data efficiently without requiring OS managed inter-process communication (IPC).
+
+- Use Case: Multithreading is particularly useful in high-performance applications such as graphics rendering and deep learning.
 
 
-- Fast Communication: Since threads within the same process share memory, they can exchange data efficiently without requiring inter-process communication mechanisms.
+### Unmanaged Synchronization.
 
-- Use Case: Multithreading is particularly useful in high-performance applications such as graphics rendering (e.g., shader programming) and parallel computations.
-
-
-### Cons - developer's burden on synchronization.
-
-- Lack of Isolation: Unlike processes, threads do not have full isolation. If one thread crashes or corrupts shared data, it can affect all threads within the process.
-
-- Developer’s Responsibility: Ensuring data consistency requires explicit synchronization mechanisms (e.g., mutexes, semaphores, or atomic operations). Improper synchronization can lead to race conditions, deadlocks, and performance bottlenecks.
+- Lack of Isolation: Unlike processes, threads do not have full isolation which automatically controlled by OS. If one thread crashes or corrupts shared data, it can affect all threads within the processes. Improper synchronization can lead to race conditions, deadlocks, and performance bottlenecks.
 
 ## Example of Multithreading
 Below are basic implementations of multithreading in Python and C++.
