--- a/docs/programming/concurrent-programming/07. IPC-Shared-Memory.md
+++ b/docs/programming/concurrent-programming/07. IPC-Shared-Memory.md
@@ -39,6 +39,38 @@ Condition variables are a synchronization primitive that allows threads to wait 
 
 Shared memory is a region of memory that can be accessed by multiple processes. It enables high-speed data exchange but requires explicit synchronization to prevent data corruption or race conditions.
 
+```mermaid
+%%{
+  init: {
+    'theme': 'base',
+    'layout': 'elk',
+    'themeVariables': {
+      'primaryColor': '#b19cd9',
+      'primaryTextColor': '#4b0082',
+      'primaryBorderColor': '#800080',
+      'edgeLabelBackground': '#ffffff',
+      'tertiaryColor': '#e6e6fa', 
+      'nodeBorder': '#6a0dad'
+    },
+    'curve': 'basis'
+  }
+}%%
+sequenceDiagram
+    participant Process A
+    participant Mutex
+    participant Shared Memory
+    participant Process B
+
+    Process A->>Mutex: Lock Mutex (Access Shared Memory)
+    Process A->>Shared Memory: Write Data (Critical Section)
+    Process A->>Mutex: Unlock Mutex
+
+    Process B->>Mutex: Lock Mutex (Wait for Process A)
+    Process B->>Shared Memory: Read Data (Critical Section)
+    Process B->>Mutex: Unlock Mutex
+
+```
+
 ### Characteristics of Shared Memory
 1. **Direct Access**  
 Shared memory involves creating a region of memory in userland that multiple processes or threads can directly access.
@@ -46,7 +78,6 @@ Shared memory involves creating a region of memory in userland that multiple pro
 Shared memory is generally faster than message passing because it avoids the overhead of copying data.
 3. **Developer Responsibility**  
 The OS provides the mechanism to create the shared memory region, but it does not manage concurrent access.
-
 
 
 ### Python Example
@@ -156,6 +187,52 @@ int main()
 ## **Thread Pool Pattern**
 
 A thread pool consists of multiple worker threads that execute tasks concurrently. These threads share resources, reducing the overhead of creating and destroying threads frequently. Synchronization techniques, such as mutexes and condition variables, help manage access to shared resources efficiently.
+
+```mermaid
+%%{
+  init: {
+    'theme': 'base',
+    'layout': 'elk',
+    'themeVariables': {
+      'primaryColor': '#b19cd9',
+      'primaryTextColor': '#4b0082',
+      'primaryBorderColor': '#800080',
+      'edgeLabelBackground': '#ffffff',
+      'tertiaryColor': '#e6e6fa', 
+      'nodeBorder': '#6a0dad'
+    },
+    'curve': 'basis'
+  }
+}%%
+sequenceDiagram
+    participant Client 1
+    participant Client 2
+    participant Task Queue
+    participant Mutex
+    participant Condition Variable
+    participant Thread 1
+    participant Thread 2
+    participant Atomic Boolean (Stop Flag)
+
+    Client 1->>Task Queue: Submit Task A (Lock Mutex)
+    Client 2->>Task Queue: Submit Task B (Lock Mutex)
+    Task Queue-->>Mutex: Unlock After Insertion
+    Task Queue-->>Condition Variable: Notify Worker Threads
+    
+    Condition Variable-->>Thread 1: Wake Up
+    Thread 1->>Task Queue: Fetch Task A (Lock Mutex)
+    Task Queue-->>Mutex: Unlock After Fetch
+    Thread 1->>Thread 1: Process Task A
+
+    Condition Variable-->>Thread 2: Wake Up
+    Thread 2->>Task Queue: Fetch Task B (Lock Mutex)
+    Task Queue-->>Mutex: Unlock After Fetch
+    Thread 2->>Thread 2: Process Task B
+
+    Atomic Boolean (Stop Flag)->>Thread 1: Check Termination Condition
+    Atomic Boolean (Stop Flag)->>Thread 2: Check Termination Condition
+
+```
 
 ### Thread Pool in Python
 ```python
