--- a/docs/programming/concurrent-programming/07. IPC-Shared-Memory.md
+++ b/docs/programming/concurrent-programming/07. IPC-Shared-Memory.md
@@ -187,22 +187,23 @@ int main()
 ## **Thread Pool Pattern**
 
 A thread pool consists of multiple worker threads that execute tasks concurrently. These threads share resources, reducing the overhead of creating and destroying threads frequently. Synchronization techniques, such as mutexes and condition variables, help manage access to shared resources efficiently.
+<div class="code-example" markdown="1" >
 
 ```mermaid
 %%{
-  init: {
+init: {
     'theme': 'base',
     'layout': 'elk',
     'themeVariables': {
-      'primaryColor': '#b19cd9',
-      'primaryTextColor': '#4b0082',
-      'primaryBorderColor': '#800080',
-      'edgeLabelBackground': '#ffffff',
-      'tertiaryColor': '#e6e6fa', 
-      'nodeBorder': '#6a0dad'
+    'primaryColor': '#b19cd9',
+    'primaryTextColor': '#4b0082',
+    'primaryBorderColor': '#800080',
+    'edgeLabelBackground': '#ffffff',
+    'tertiaryColor': '#e6e6fa', 
+    'nodeBorder': '#6a0dad'
     },
     'curve': 'basis'
-  }
+}
 }%%
 sequenceDiagram
     participant Client 1
@@ -233,6 +234,9 @@ sequenceDiagram
     Atomic Boolean (Stop Flag)->>Thread 2: Check Termination Condition
 
 ```
+
+</div>
+
 
 ### Thread Pool in Python
 ```python
