--- a/docs/programming/concurrent-programming/07. IPC-Shared-Memory.md
+++ b/docs/programming/concurrent-programming/07. IPC-Shared-Memory.md
@@ -40,21 +40,7 @@ Condition variables are a synchronization primitive that allows threads to wait 
 Shared memory is a region of memory that can be accessed by multiple processes. It enables high-speed data exchange but requires explicit synchronization to prevent data corruption or race conditions.
 
 ```mermaid
-%%{
-  init: {
-    'theme': 'base',
-    'layout': 'elk',
-    'themeVariables': {
-      'primaryColor': '#b19cd9',
-      'primaryTextColor': '#4b0082',
-      'primaryBorderColor': '#800080',
-      'edgeLabelBackground': '#ffffff',
-      'tertiaryColor': '#e6e6fa', 
-      'nodeBorder': '#6a0dad'
-    },
-    'curve': 'basis'
-  }
-}%%
+ 
 sequenceDiagram
     participant Process A
     participant Mutex
@@ -184,59 +170,26 @@ int main()
 }
 ```
 
-## **Thread Pool Pattern**
+## Thread Pool Pattern
 
 A thread pool consists of multiple worker threads that execute tasks concurrently. These threads share resources, reducing the overhead of creating and destroying threads frequently. Synchronization techniques, such as mutexes and condition variables, help manage access to shared resources efficiently.
-<div class="code-example" markdown="1" >
-
 ```mermaid
-%%{
-init: {
-    'theme': 'base',
-    'layout': 'elk',
-    'themeVariables': {
-    'primaryColor': '#b19cd9',
-    'primaryTextColor': '#4b0082',
-    'primaryBorderColor': '#800080',
-    'edgeLabelBackground': '#ffffff',
-    'tertiaryColor': '#e6e6fa', 
-    'nodeBorder': '#6a0dad'
-    },
-    'curve': 'basis'
-}
-}%%
 sequenceDiagram
-    participant Client 1
-    participant Client 2
-    participant Task Queue
-    participant Mutex
-    participant Condition Variable
-    participant Thread 1
-    participant Thread 2
-    participant Atomic Boolean (Stop Flag)
+    participant Client1
+    participant Client2
+    participant TaskQueue
+    participant ThreadPool
+    participant Worker1
+    participant Worker2
 
-    Client 1->>Task Queue: Submit Task A (Lock Mutex)
-    Client 2->>Task Queue: Submit Task B (Lock Mutex)
-    Task Queue-->>Mutex: Unlock After Insertion
-    Task Queue-->>Condition Variable: Notify Worker Threads
-    
-    Condition Variable-->>Thread 1: Wake Up
-    Thread 1->>Task Queue: Fetch Task A (Lock Mutex)
-    Task Queue-->>Mutex: Unlock After Fetch
-    Thread 1->>Thread 1: Process Task A
-
-    Condition Variable-->>Thread 2: Wake Up
-    Thread 2->>Task Queue: Fetch Task B (Lock Mutex)
-    Task Queue-->>Mutex: Unlock After Fetch
-    Thread 2->>Thread 2: Process Task B
-
-    Atomic Boolean (Stop Flag)->>Thread 1: Check Termination Condition
-    Atomic Boolean (Stop Flag)->>Thread 2: Check Termination Condition
-
+    Client1->>TaskQueue: Submit Task A
+    Client2->>TaskQueue: Submit Task B
+    TaskQueue-->>ThreadPool: Notify New Tasks
+    ThreadPool->>Worker1: Assign Task A
+    Worker1->>Worker1: Process Task A
+    ThreadPool->>Worker2: Assign Task B
+    Worker2->>Worker2: Process Task B
 ```
-
-</div>
-
 
 ### Thread Pool in Python
 ```python
