[fix] change mermaid to drawio png

--- a/docs/programming/concurrent-programming/09. Decomposition - Task.md
+++ b/docs/programming/concurrent-programming/09. Decomposition - Task.md
@@ -35,56 +35,7 @@ We design the steps be in different resources (thread / processes ) and then con
 
 ### Dependency Graph Example
 
-```mermaid
-
-sequenceDiagram
-    participant Main
-    participant Designer
-    participant Manufacturer1
-    participant Manufacturer2
-    participant Manager
-
-    Main->>Designer: Start Thread
-    Main->>Manufacturer1: Start Thread
-    Main->>Manufacturer2: Start Thread
-    Main->>Manager: Start Thread
-
-    loop For each project
-        Main->>Designer: Put "Shoes #idx" into to_be_planned queue
-    end
-
-    Designer->>Designer: Get workload from to_be_planned queue
-    Designer->>Designer: Process workload (sleep 0.2s)
-    Designer->>Manufacturer1: Put workload into to_be_programmed queue
-    Designer->>Manufacturer2: Put workload into to_be_programmed queue
-
-    Manufacturer1->>Manufacturer1: Get workload from to_be_programmed queue
-    Manufacturer1->>Manufacturer1: Process workload (sleep 0.4s)
-    Manufacturer1->>Manager: Put workload into to_be_finalized queue
-
-    Manufacturer2->>Manufacturer2: Get workload from to_be_programmed queue
-    Manufacturer2->>Manufacturer2: Process workload (sleep 0.5s)
-    Manufacturer2->>Manager: Put workload into to_be_finalized queue
-
-    Manager->>Manager: Get workload from to_be_finalized queue
-    Manager->>Manager: Process workload (sleep 0.1s)
-
-    loop For all projects processed
-        Manufacturer1->>SharedCounter: Increment counter
-        Manufacturer2->>SharedCounter: Increment counter
-        SharedCounter->>Manufacturer1: Get counter
-        SharedCounter->>Manufacturer2: Get counter
-    end
-
-    Designer->>Main: Join Thread
-    Manufacturer1->>Main: Join Thread
-    Manufacturer2->>Main: Join Thread
-    Manager->>Main: Join Thread
-
-    Main->>Main: Timer end
-    Main-->>Main: Print execution time
-```
-
+<img src="https://sangdo-han.github.io/docs/programming/concurrent-programming/images/09_task_pipeline.png">
 
 ### Python Example
 
