because of jekyll split lines

--- a/docs/programming/cpp/02. Pointers.md
+++ b/docs/programming/cpp/02. Pointers.md
@@ -108,7 +108,10 @@ void CStylePointer() {
 
     std::cout << "\n\n==== BASIC C-style RAW POINTER - 2D Array ====\n";
 
-    int array2D[2][5] = {{0, 1, 2, 3, 4}, {5, 6, 7, 8, 9}};
+    int array2D[2][5] = {
+        {0, 1, 2, 3, 4},
+        {5, 6, 7, 8, 9}
+    };
 
     std::cout << "**array2D points to: " << **array2D << " (first element: 0)\n";
     std::cout << "**(array2D + 1) points to: " << **(array2D + 1) << " (first element of second row: 5)\n";
