[fix] match to coding conventions

--- a/docs/programming/concurrent-programming/09. Decomposition - Task.md
+++ b/docs/programming/concurrent-programming/09. Decomposition - Task.md
@@ -161,41 +161,52 @@ if __name__ == "__main__":
 #include <string>
 
 template<typename T>
-class ThreadSafeQueue {
+class ThreadSafeQueue
+{
 public:
-    void Push(T item) {
+    void Push(T item)
+    {
         std::lock_guard<std::mutex> lock(m_Mutex);
         m_Queue.push(std::move(item));
         m_CV.notify_one();
     }
     
-    bool Pop(T& item, std::chrono::milliseconds timeout) {
+    bool Pop(T& item, std::chrono::milliseconds timeout)
+    {
         std::unique_lock<std::mutex> lock(m_Mutex);
-        if (m_CV.wait_for(lock, timeout, [this] { return !m_Queue.empty(); })) {
+        if (m_CV.wait_for(lock, timeout, [this] { return !m_Queue.empty(); }))
+        {
             item = std::move(m_Queue.front());
             m_Queue.pop();
             return true;
         }
         return false;
     }
+
 private:
     std::queue<T> m_Queue;
     mutable std::mutex m_Mutex;
     std::condition_variable m_CV;
 };
 
-class SharedCounter {
+class SharedCounter
+{
 public:
-    SharedCounter(int initialValue = 0) : m_Value(initialValue) {}
-    void Increment() {
+    SharedCounter(int initialValue = 0)
+    : m_Value(initialValue)
+    {}
+    void Increment()
+    {
         std::lock_guard<std::mutex> lock(m_Mutex);
         ++m_Value;
     }
-    void Decrement() {
+    void Decrement()
+    {
         std::lock_guard<std::mutex> lock(m_Mutex);
         --m_Value;
     }
-    int Get() {
+    int Get()
+    {
         std::lock_guard<std::mutex> lock(m_Mutex);
         return m_Value;
     }
@@ -205,7 +216,8 @@ private:
 
 };
 
-class Worker {
+class Worker
+{
 public:
     Worker(
         ThreadSafeQueue<std::string>& queueIn,
@@ -214,38 +226,47 @@ public:
         std::chrono::milliseconds turnaroundTime,
         int numProjects,
         std::shared_ptr<SharedCounter> processCounter = nullptr
-    ) : m_QueueIn(queueIn),
-        m_QueueOut(queueOut),
-        m_JobType(std::move(jobType)),
-        m_TurnaroundTime(turnaroundTime),
-        m_NumProjects(numProjects),
-        m_ProcessCounter(processCounter ? processCounter : std::make_shared<SharedCounter>())
+    )
+    : m_QueueIn(queueIn)
+    , m_QueueOut(queueOut)
+    , m_JobType(std::move(jobType))
+    , m_TurnaroundTime(turnaroundTime)
+    , m_NumProjects(numProjects)
+    , m_ProcessCounter(processCounter ? processCounter : std::make_shared<SharedCounter>())
     {}
 
-    void Start() {
+    void Start()
+    {
         m_Thread = std::thread(&Worker::run, this);
     }
 
-    void Join() {
-        if (m_Thread.joinable()) {
+    void Join()
+    {
+        if (m_Thread.joinable())
+        {
             m_Thread.join();
         }
     }
 
-    ~Worker() {
+    ~Worker()
+    {
         Join();
     }
 
 private:
-    void run() {
-        while (m_ProcessCounter->Get() < m_NumProjects) {
+    void run()
+    {
+        while (m_ProcessCounter->Get() < m_NumProjects)
+        {
             std::string workload;
-            bool got = m_QueueIn.Pop(workload, std::chrono::seconds(1));
-            if (got) {
+            bool isPopped = m_QueueIn.Pop(workload, std::chrono::seconds(1));
+            if (isPopped)
+            {
                 std::cout << m_JobType << " .... " << workload << std::endl;
                 std::this_thread::sleep_for(m_TurnaroundTime);
                 m_ProcessCounter->Increment();
-                if (m_QueueOut) {
+                if (m_QueueOut)
+                {
                     m_QueueOut->Push(workload);
                 }
             }
@@ -262,13 +283,18 @@ private:
 
 };
 
-class Pipeline {
+class Pipeline
+{
 public:
-    Pipeline(int numProjects) : m_NumProjects(numProjects) {}
+    Pipeline(int numProjects)
+    : m_NumProjects(numProjects)
+    {}
 
-    void RunConcurrently() {
+    void RunConcurrently()
+    {
         ThreadSafeQueue<std::string> toBePlanned;
-        for (int idx = 0; idx < m_NumProjects; ++idx) {
+        for (int idx = 0; idx < m_NumProjects; ++idx)
+        {
             toBePlanned.Push("Shoes #" + std::to_string(idx));
         }
 
@@ -297,20 +323,22 @@ private:
     int m_NumProjects;
 };
 
-class Timer {
-private:
-    std::chrono::time_point<std::chrono::high_resolution_clock> start;
-
+class Timer
+{    
 public:
-    Timer() {
+    Timer()
+    {
         start = std::chrono::high_resolution_clock::now();
     }
 
-    ~Timer() {
+    ~Timer()
+    {
         auto end = std::chrono::high_resolution_clock::now();
         auto duration = std::chrono::duration_cast<std::chrono::milliseconds>(end - start);
         std::cout << "Time taken: " << duration.count() << " milliseconds" << std::endl;
     }
+private:
+    std::chrono::time_point<std::chrono::high_resolution_clock> start;
 };
 
 int main() {
