--- a/docs/programming/cpp/01. Coding Conventions.md
+++ b/docs/programming/cpp/01. Coding Conventions.md
@@ -13,6 +13,7 @@ tags:
 
 1. variables, private class methods (private member function)  be `camelCase`
 2. classes, structs, public functions and public class methods (public member function) be `PascalCase`
-3. namespace be a brief abbreviation of `lowercase`
+3. namespace be `lowercase`
 4. private member variable starts with `m_` (i.e. `m_Mutex`)
 5. static variable starts with `s_` (i.e. `s_Config`)
+6. 
