--- a/docs/programming/cpp/02. Pointers.md
+++ b/docs/programming/cpp/02. Pointers.md
@@ -171,7 +171,8 @@ void CStyleDynamicAllocation() {
 
     // Allocate memory for an integer
     int* intPtr = (int*)malloc(sizeof(int));
-    if (intPtr == nullptr) {
+    if (intPtr == nullptr)
+    {
         std::cerr << "Memory allocation failed!\n";
         return;
     }
@@ -184,15 +185,18 @@ void CStyleDynamicAllocation() {
 
     // Allocate memory for an array of integers
     int* arrayPtr = (int*)malloc(5 * sizeof(int));
-    if (arrayPtr == nullptr) {
+    if (arrayPtr == nullptr)
+    {
         std::cerr << "Memory allocation failed for array!\n";
         return;
     }
-    for (int i = 0; i < 5; ++i) {
+    for (int i = 0; i < 5; ++i)
+    {
         arrayPtr[i] = i * 10;
     }
     std::cout << "Allocated array values: ";
-    for (int i = 0; i < 5; ++i) {
+    for (int i = 0; i < 5; ++i)
+    {
         std::cout << arrayPtr[i] << " ";
     }
     std::cout << "\n";
@@ -223,7 +227,9 @@ public:
     // Constructor (default deleter uses `delete`)
     // for default value of deleter, set a normal function that deletes pointer : delete p;
     explicit UniquePtr(T* ptr = nullptr, Deleter deleter = [](T* p) { delete p; })
-        : m_Ptr(ptr), m_Deleter(deleter) {}
+        : m_Ptr(ptr)
+        , m_Deleter(deleter)
+        {}
 
     // Destructor
     ~UniquePtr()
@@ -297,7 +303,9 @@ class UniquePtr<T[], Deleter>
 public:
     // Constructor
     explicit UniquePtr(T* ptr = nullptr, Deleter deleter = [](T* p) { delete[] p; })
-        : m_Ptr(ptr), m_Deleter(deleter) {}
+        : m_Ptr(ptr)
+        , m_Deleter(deleter)
+    {}
 
     // Destructor
     ~UniquePtr()
@@ -370,16 +378,22 @@ int main()
     std::cout << "Single Value: " << *singlePtr << std::endl;
 
     // Managing a single object with a custom deleter
-    UniquePtr<int> customDelPtr(new int(99), [](int* p) {
-        std::cout << "[DEBUG] Custom deleter called for " << *p << std::endl;
-        delete p;
-    });
+    UniquePtr<int> customDelPtr(
+        new int(99),
+        [](int* p)
+        {
+            std::cout << "[DEBUG] Custom deleter called for " << *p << std::endl;
+            delete p;
+        }
+    );
 
     // Managing a dynamic array with default deleter
     UniquePtr<int[]> arrayPtr(new int[5]{1, 2, 3, 4, 5});
     std::cout << "Array Values: ";
     for (int i = 0; i < 5; ++i)
+    {
         std::cout << arrayPtr[i] << " ";
+    }
     std::cout << std::endl;
 
     // Resetting a pointer
@@ -389,7 +403,9 @@ int main()
     // Transferring ownership
     UniquePtr<int[]> movedArray = std::move(arrayPtr);
     if (!arrayPtr.Get())
+    {
         std::cout << "Ownership transferred successfully!" << std::endl;
+    }
 
     return 0;
 }
