start posting data decomposition

--- a/docs/programming/concurrent-programming/09. Decomposition - Task.md
+++ b/docs/programming/concurrent-programming/09. Decomposition - Task.md
@@ -350,3 +350,8 @@ int main() {
     return 0;
 }
 ```
+
+## Conclusion 
+
+Pipeline pattern is often used in the big data ETL (Extract, Transform, Load) process. As you can have noticed, the pipeline allows us to limit the number of threads, such as in the thread pool. This is why it is most useful when the number of shared resources is limited.
+
