--- a/docs/programming/concurrent-programming/10. Decomposition - Data.md
+++ b/docs/programming/concurrent-programming/10. Decomposition - Data.md
@@ -13,3 +13,89 @@ tags:
   - map
   - map/reduce
 ---
+
+# Data Decomposition
+
+Data decomposition is achieved by dividing the data / works into chunks properly. We simply constrain the data decomposition at the application layer however, in bigdata scenario, we split data in parallel at the hardware level. 
+
+## Loop-level parallelism
+
+Loop-level parallelism is distributing independent interactions of a loop accross multiple tasks. We've done this a lot in the beginning of introducing multithreading or multiprocessing.
+
+### Loop-level in Python
+```python
+import time
+import threading
+import typing as T
+
+def waste_cpu(idx:int, item:int, out_arr:T.List[int]):
+    out_arr[idx] = item ** 2
+    time.sleep(2)
+
+def loop_level_parallelism():
+    NUM_ARR = 10
+    input_arr = list(range(NUM_ARR))
+    output_arr = [None] * NUM_ARR
+
+    threads = []
+    for idx, item in enumerate(input_arr):
+        t = threading.Thread(target=waste_cpu, args=(idx, item, output_arr))
+        t.start()
+    for t in threads:
+        t.join()
+    print(output_arr)
+
+if "__main__" == __name__:
+    loop_level_parallelism()
+```
+
+### Loop-level in C++
+```cpp
+#include<array>
+#include<chrono>
+#include<iostream>
+#include<thread>
+
+void WasteCpu(int idx, int item, std::array<int, 10>& outArr)
+{
+  using namespace std::chrono_literals;
+    outArr[idx] = item * item;
+    std::this_thread::sleep_for(2s);
+}
+
+int main()
+{
+    std::array<int, 10> inArr;
+    std::array<int, 10> outArr;
+    std::array<std::thread, 10> threads;
+
+    for (size_t i=0; i<10; ++i)
+    {
+        inArr[i] = i;
+    }
+
+    for (int i=0; i<10; ++i)
+    {
+        threads[i] = std::thread(WasteCpu, i, inArr[i], std::ref(outArr));
+    }
+
+    for (auto& t: threads)
+    {
+        t.join();
+    }
+
+    for (int& item : outArr)
+    {
+        std::cout << item << " ";
+    }
+    std::cout << std::endl;
+}
+```
+
+## Map pattern
+
+## Fork / Join pattern
+
+## Map Reduce pattern
+
+## Conclusion
